--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express-validator": "^6.3.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.8.1",
+    "node-media-server": "^2.3.9",
     "shortid": "^2.2.15"
   },
   "devDependencies": {
