--- a/package.json
+++ b/package.json
@@ -22,10 +22,13 @@
     "config": "^3.2.4",
     "express": "^4.17.1",
     "express-validator": "^6.3.0",
+    "http": "^0.0.1-security",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.8.1",
     "node-media-server": "^2.3.9",
-    "shortid": "^2.2.15"
+    "shortid": "^2.2.15",
+    "soket.io": "^0.0.1-security",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "concurrently": "^5.0.2",
