--- a/client/package.json
+++ b/client/package.json
@@ -8,12 +8,14 @@
         "@testing-library/user-event": "^7.1.2",
         "bootstrap": "^5.1.3",
         "materialize-css": "^1.0.0-rc.2",
+        "peerjs": "^1.4.6",
         "react": "^16.12.0",
         "react-dom": "^16.12.0",
         "react-flv-player": "^1.0.9",
         "react-helmet": "^6.1.0",
         "react-router-dom": "^5.1.2",
-        "react-scripts": "^5.0.1"
+        "react-scripts": "^5.0.1",
+        "socket.io-client": "^4.5.1"
     },
     "scripts": {
         "start": "react-scripts start",
