--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "mongoose": "^5.8.1",
     "node-media-server": "^2.3.9",
     "shortid": "^2.2.15",
-    "soket.io": "^0.0.1-security",
+    "socket.io": "^4.5.1",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
