--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,8 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "@editorjs/editorjs": "^2.25.0",
+        "@editorjs/link": "^2.4.1",
         "@testing-library/jest-dom": "^4.2.4",
         "@testing-library/react": "^9.3.2",
         "@testing-library/user-event": "^7.1.2",
@@ -11,6 +13,7 @@
         "peerjs": "^1.4.6",
         "react": "^16.12.0",
         "react-dom": "^16.12.0",
+        "react-editor-js": "^2.1.0",
         "react-flv-player": "^1.0.9",
         "react-helmet": "^6.1.0",
         "react-router-dom": "^5.1.2",
@@ -40,6 +43,7 @@
         ]
     },
     "devDependencies": {
+        "@editorjs/image": "^2.6.2",
         "node-sass": "^7.0.1",
         "sass-loader": "^13.0.2"
     }
