--- a/client/package.json
+++ b/client/package.json
@@ -3,11 +3,14 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "@ckeditor/ckeditor5-build-classic": "^34.2.0",
+        "@ckeditor/ckeditor5-react": "^5.0.2",
         "@editorjs/editorjs": "^2.25.0",
         "@editorjs/link": "^2.4.1",
         "@testing-library/jest-dom": "^4.2.4",
         "@testing-library/react": "^9.3.2",
         "@testing-library/user-event": "^7.1.2",
+        "@tinymce/tinymce-react": "^4.1.0",
         "bootstrap": "^5.1.3",
         "materialize-css": "^1.0.0-rc.2",
         "peerjs": "^1.4.6",
